修改简历内部标题

--- a/3年-java高级研发-张向南.md.html
+++ b/3年-java高级研发-张向南.md.html
@@ -473,7 +473,7 @@ pre.editor-colors .fold-marker:after,
 }
 </style>
   </head>
-  <body class='markdown-preview' data-use-github-style><h2 id="3-java-">3年-java高级研发工程师-张向南-求职简历</h2>
+  <body class='markdown-preview' data-use-github-style><h1 id="-">求职简历</h1>
 <hr>
 <h2 id="-">联系方式</h2>
 <ul>
@@ -517,7 +517,7 @@ pre.editor-colors .fold-marker:after,
 <ul>
 <li>公司内部分享：[ELK技术分享]</li>
 </ul>
-<h2 id="-">技能清单</h2>
+<h3 id="-">技能清单</h3>
 <ul>
 <li>Web开发：nodejs/servlet/jsp</li>
 <li>Web框架：SpringMVC/Spring/mybatis/</li>
@@ -531,6 +531,6 @@ pre.editor-colors .fold-marker:after,
 <li>IDE： Intellj Idea</li>
 </ul>
 <hr>
-<h2 id="-">致谢</h2>
+<h3 id="-">致谢</h3>
 <p>感谢您花时间阅读我的简历，期待能有机会和您共事。</p></body>
 </html>
