修改公司名称

--- a/3年-java高级研发-张向南.md.html
+++ b/3年-java高级研发-张向南.md.html
@@ -496,7 +496,7 @@ pre.editor-colors .fold-marker:after,
 </ul>
 <hr>
 <h2 id="-">工作经历</h2>
-<h3 id="-2015-6-2016-6-">北京丁丁优房科技信息有限公司 （ 2015年6月 ~ 2016年6月 ）</h3>
+<h3 id="-2015-6-2016-6-">北京丁丁优房科技信息有限公司（链家旗下） （ 2015年6月 ~ 2016年6月 ）</h3>
 <h4 id="-">交易支付项目</h4>
 <p>　　我在此项目中负责合同创建、支付入口、待支付列表、支付房租及佣金及回调、支付明细、合同pdf生成、白条解约、丁丁月付（录标、放款、绑定银行卡、代扣及回调）新老系统融合等功能及bugfix。<br>　　其中，在创建合同、支付明细计算、支付接口、支付回调的功能实现中使用模版方法，使代码可扩展性更强，更清晰。<br>　　我通过该项目熟悉了常见第三方支付渠道如微信、支付宝、银联的支付流程、芝麻信用的接入流程、京东白条的使用流程、接链家理财对接的流程、典型互联网公司的项目架构，也熟悉了dubbo分布式服务框架的使用、消息队列redis的使用、mycat做主从库、haproxy及keepalived实现热备与负载均衡。<br>　　我在项目中遇到支付房租及回调的并发问题，通过采取代码及数据库双重保障，解决了支付的并发问题，并了解幂等性的重要性。   </p>
 <h4 id="-">动态轨迹项目</h4>
